# gangshit

./: .env.example  .gitignore  embedder_config.py  pyproject.toml  test_crew.py  test_llm.py
src/: main.py
src/gangshit/: __init__.py  crew.py  main.py  test_imports.py
src/gangshit/config/: agents.yaml  tasks.yaml
src/gangshit/tools/: __init__.py  custom_tool.py
src/knowledge/: analyst_instructions.txt  coding_agent_instructions.txt  overlord_instructions.txt  research_instructions.txt
tests/: test_crew.py
