[project]
name = "gangshit"
version = "0.1.0"
description = "gangshit using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "docling>=2.38.1",
    "pydantic>=2.11.7",
]

[project.scripts]
gangshit = "gangshit.main:run"
run_crew = "gangshit.main:run"
train = "gangshit.main:train"
replay = "gangshit.main:replay"
test = "gangshit.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
